tests/e2e/macro_expand/snapshots/e2e__macro_expand__attribute#1d4a457517a42cdf.snap
---
source: tests/e2e/macro_expand/mod.rs
expression: report
---
source_contexts = '''
#[genera<caret>te_trait]

impl ImplA of A<caret>Trait {

        println!("a");<caret>
'''
expansion = '''
// generate_trait
// --------------

trait ATrait {
    fn c(self: A) -> felt252;
}

// lib.cairo
// ---------

#[generate_trait]
impl ImplA of ATrait {
    fn c(self: A) -> felt252 {
        {
            let mut __formatter_for_print_macros__: core::fmt::Formatter =
                core::traits::Default::default();
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                {
                    core::byte_array::ByteArrayTrait::append_word(
                        ref __formatter_for_print_macros__.buffer, 0x610a, 2,
                    );
                    core::result::Result::<(), core::fmt::Error>::Ok(())
                },
            );
            core::debug::print_byte_array_as_string(@__formatter_for_print_macros__.buffer);
        };
        self.a + 1
    }
}'''
