tests/e2e/macro_expand/snapshots/e2e__macro_expand__attribute#ba70f5b1fe94bdb7.snap
---
source: tests/e2e/macro_expand/mod.rs
expression: report
---
source_contexts = '''
        print<caret>ln!("a");
'''
expansion = '''
// lib.cairo
// ---------

{
    let mut __formatter_for_print_macros__: core::fmt::Formatter = core::traits::Default::default();
    core::result::ResultTrait::<
        (), core::fmt::Error,
    >::unwrap(
        {
            core::byte_array::ByteArrayTrait::append_word(
                ref __formatter_for_print_macros__.buffer, 0x610a, 2,
            );
            core::result::Result::<(), core::fmt::Error>::Ok(())
        },
    );
    core::debug::print_byte_array_as_string(@__formatter_for_print_macros__.buffer);
}'''
