tests/e2e/macro_expand/snapshots/e2e__macro_expand__empty#87f05a038d8ff739.snap
---
source: tests/e2e/macro_expand/mod.rs
expression: report
---
source_contexts = '''
fn m<caret>ain() -> u32 {

fn main() -> u3<caret>2 {

    // co<caret>mments

    fib(1<caret>6)

    fib(16)<caret>
'''
expansion = '''
// lib.cairo
// ---------

fn main() -> u32 {
    // comments
    fib(16)
}'''
